updated: TN-00001 embedded picture

--- a/_posts/2025-09-24-Technical-Note-00001.md
+++ b/_posts/2025-09-24-Technical-Note-00001.md
@@ -55,7 +55,7 @@ The team systematically evaluated three primary architectural styles:
 
 ## Key Architectural Components
 
-![architecure_overview](./assets/20250924-TN-00001_architecture.drawio.png "architecure_overview")
+![architecure_overview](./assets/images/20250924-TN-00001_architecture.drawio.png)
 
 1. **Middleware ↔ Internal systems**: proprietary logic exchanges data and commands with middleware  
 2. **Middleware ↔ Peer platforms**: secure direct communication across platforms  
